human_written_tests/WebAssembly/processed_control_flow_validation/test_nop_3.wast
(assert_invalid
  (module (func $type-f32 (result f32) (nop)))
  "type mismatch"
)